feat: prepare macOS preview applications